crates/printer/src/operation_js_printer/tests/snapshots/nitrogql_printer__operation_js_printer__tests__print_fragment_only.snap
---
source: crates/printer/src/operation_js_printer/tests/mod.rs
expression: print_js(&document)
---
export const Foo = {"kind":"Document","definitions":[{"kind":"FragmentDefinition","name":{"kind":"Name","value":"Foo"},"typeCondition":{"kind":"NamedType","name":{"kind":"Name","value":"User"}},"directives":[],"selectionSet":{"kind":"SelectionSet","selections":[{"kind":"Field","name":{"kind":"Name","value":"id"},"arguments":[],"directives":[]},{"kind":"Field","name":{"kind":"Name","value":"name"},"arguments":[],"directives":[]}]}}]};


